--- a/src/MoviesData/Movies/styles.module.css
+++ b/src/MoviesData/Movies/styles.module.css
@@ -77,3 +77,23 @@
 .input_field input[type="search"] {
     padding-left: 8px;
 }
+.pagination {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 12px;
+}
+.no_data {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 200px;
+    left: 340px;
+    padding: 16px;
+    border-radius: 4px;
+    width: 50%;
+    background: #dfdfde;
+    box-shadow: 0px 0px 8px 0px rgba(98, 127, 172, 0.2);
+}
