--- a/src/MoviesData/Movies/MovieDetails/styles.module.css
+++ b/src/MoviesData/Movies/MovieDetails/styles.module.css
@@ -49,21 +49,13 @@
     margin: 0 8px 0 0;
 }
 .vr {
-    display: flex;
-    align-items: center;
-    height: 16px;
-    width: 1px;
     margin: 0 4px;
-    background: #4a4a4a;
+    border-right: 1px solid #4a4a4a;
 }
 .name {
     color: #4a4a4a;
     margin-left: 2px;
 }
-/* .cast {
-    font-weight: 900;
-    font-size: 18px;
-} */
 .description {
     margin-top: 12px;
 }
