--- a/src/MoviesData/Movies/Pagination/styles.module.css
+++ b/src/MoviesData/Movies/Pagination/styles.module.css
@@ -11,3 +11,14 @@
 .icon:disabled {
     background: #dfdfde;
 }
+.button {
+    margin-left: 4px;
+    @media (max-width: 512px) {
+        margin-top: 2px;
+    }
+}
+.container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
