--- a/src/MoviesData/Movies/styles.module.css
+++ b/src/MoviesData/Movies/styles.module.css
@@ -25,6 +25,7 @@
 }
 .movie_container {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     position: absolute;
     margin-top: 66px;
