--- a/src/MoviesData/Movies/MovieDetails/styles.module.css
+++ b/src/MoviesData/Movies/MovieDetails/styles.module.css
@@ -33,7 +33,6 @@
 }
 .poster {
     border-radius: 4px;
-    height: 100%;
     width: 100%;
     box-shadow: 0px 0px 8px 0px rgba(98, 127, 172, 0.2);
 }
@@ -76,4 +75,7 @@
     width: 50%;
     background: #dfdfde;
     box-shadow: 0px 0px 8px 0px rgba(98, 127, 172, 0.2);
+    @media (max-width: 768px) {
+        left: 86px;
+    }
 }
