card heading missed

--- a/src/MoviesData/Movies/MoviesContainer/styles.module.css
+++ b/src/MoviesData/Movies/MoviesContainer/styles.module.css
@@ -10,6 +10,10 @@
         display: none;
     }
 }
+.heading {
+    display: flex;
+    justify-content: space-between;
+}
 .no_data {
     display: flex;
     flex-direction: column;
