--- a/src/MoviesData/Movies/MovieDetails/styles.module.css
+++ b/src/MoviesData/Movies/MovieDetails/styles.module.css
@@ -11,7 +11,6 @@
 }
 .description_container {
     margin-left: 32px;
-    display: flex;
     margin-top: 80px;
     @media (max-width: 768px) {
         flex-direction: column;
@@ -33,16 +32,34 @@
 }
 .poster {
     border-radius: 4px;
-    width: 100%;
+    height: 60vh;
+    width: 70vh;
     box-shadow: 0px 0px 8px 0px rgba(98, 127, 172, 0.2);
+    @media (max-width: 768px) {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .poster_container {
     margin-right: 16px;
 }
+.trailer {
+    border: none;
+    height: 60vh;
+    margin-top: 2px;
+    width: 100vh;
+    border-radius: 4px;
+    margin-right: 16px;
+    @media (max-width: 768px) {
+        width: 96%;
+        height: 100%;
+    }
+}
 .details {
     width: 100%;
     margin-bottom: 12px;
+    padding-bottom: 16px;
 }
 .text {
     color: #4a4a4a;
@@ -77,5 +94,12 @@
     box-shadow: 0px 0px 8px 0px rgba(98, 127, 172, 0.2);
     @media (max-width: 768px) {
         left: 86px;
+    }
+}
+.trailer_poster {
+    display: flex;
+    justify-content: space-between;
+    @media (max-width: 768px) {
+        flex-direction: column;
     }
 }
